// Vitest Snapshot v1

exports[`Switch component > renders a Switch in "on" state 1`] = `
<div>
  <button
    aria-checked="true"
    class="c-biUdic"
    data-state="checked"
    role="switch"
    type="button"
    value="on"
  >
    <span
      class="c-JOzIh"
      data-state="checked"
    />
  </button>
</div>
`;

exports[`Switch component > renders a disabled switch 1`] = `
<div>
  <button
    aria-checked="false"
    class="c-biUdic"
    data-disabled=""
    data-state="unchecked"
    disabled=""
    role="switch"
    type="button"
    value="on"
  >
    <span
      class="c-JOzIh"
      data-disabled=""
      data-state="unchecked"
    />
  </button>
</div>
`;

exports[`Switch component > renders a switch 1`] = `
<div>
  <button
    aria-checked="false"
    class="c-biUdic"
    data-state="unchecked"
    role="switch"
    type="button"
    value="on"
  >
    <span
      class="c-JOzIh"
      data-state="unchecked"
    />
  </button>
</div>
`;
